--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Demo window]
-Pos=81,186
+Pos=181,2
 Size=366,195
+Collapsed=0
+
+[Window][Report Window]
+Pos=2,2
+Size=178,291
 Collapsed=0
 
