implemented spot lights

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Demo window]
-Pos=1233,2
+Pos=1221,-9
 Size=366,195
 Collapsed=0
 
 [Window][Report Window]
-Pos=2,2
+Pos=0,5
 Size=346,172
 Collapsed=0
 
